Fix pathbar jumpiness due to label bolding
- Use a GtkStack to switch between the normal and the selected labels
  instead of using custom code which was error-prone and caused the
  path bar to change its width and its items to shift while the user
  navigated through the file system.

- Assign the "selected-label" class to the selected label and use CSS
  font-weight instead of hardcoding the style.

- Set the "image-button" style class on image-only buttons and the
  "text-button" style class on text-only buttons and never set both at
  the same time; this is the correct behavior which is documented in the
  official GTK+ documentation for the GtkButton class.

- Clean up some code along the way.

--- a/src/resources/css/Adwaita.css
+++ b/src/resources/css/Adwaita.css
@@ -18,6 +18,12 @@
     color: mix (@theme_selected_fg_color, @theme_selected_bg_color, 0.20);
 }
 
+/* Path bar */
+
+.path-bar button label.selected-label {
+    font-weight: bold;
+}
+
 /* Toolbar */
 
 /* Here we use the .button background-image colors from Adwaita, but ligthen them,
